# cargo-ezclippy

./: Cargo.toml  README.md  build.rs  ezclippy.json  justfile  schema.json
schemas/v0.0.0/: ezclippy.schema.json
src/: cli.rs  config.rs  error.rs  generated.rs  lints.rs  main.rs
src/commands/: init.rs  mod.rs  schema.rs
